--- a/world/apparmor/.artixlinux/pkgbase.yaml
+++ b/world/apparmor/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: apparmor
-  version: 4.1.0-3
+  version: 4.1.0-4
   arch:
     - x86_64
   pkgname:
     - apparmor
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -25,16 +25,15 @@ repos:
     version: null
     packages: []
   world-goblins:
-    version: 4.1.0-2
-    packages:
-      - apparmor-4.1.0-2-x86_64.pkg.tar.zst
+    version: null
+    packages: []
   world-gremlins:
     version: null
     packages: []
   world:
-    version: 4.1.0-3
+    version: 4.1.0-4
     packages:
-      - apparmor-4.1.0-3-x86_64.pkg.tar.zst
+      - apparmor-4.1.0-4-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
