--- a/world/calamares/.artixlinux/pkgbase.yaml
+++ b/world/calamares/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: calamares
-  version: 3.3.14-1
+  version: 3.3.14-2
   arch:
     - x86_64
   pkgname:
     - calamares
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 3.3.14-1
+    version: 3.3.14-2
     packages:
-      - calamares-3.3.14-1-x86_64.pkg.tar.zst
+      - calamares-3.3.14-2-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
