--- a/world/ntfs-3g/.artixlinux/pkgbase.yaml
+++ b/world/ntfs-3g/.artixlinux/pkgbase.yaml
@@ -1,17 +1,17 @@
 ---
 pkgbase:
   name: ntfs-3g
-  version: 2022.10.3-1
+  version: 2022.10.3-2
   arch:
     - x86_64
   pkgname:
     - ntfs-3g
 actions:
-  addRepo: null
+  addRepo: world
   removeRepo: null
-  triggersBuild: false
+  triggersBuild: true
   triggersRebuild: false
-  triggersRepoAdd: false
+  triggersRepoAdd: true
   triggersRepoRemove: false
   triggersNoCheck: false
 repos:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 2022.10.3-1
+    version: 2022.10.3-2
     packages:
-      - ntfs-3g-2022.10.3-1-x86_64.pkg.tar.zst
+      - ntfs-3g-2022.10.3-2-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
@@ -52,3 +52,4 @@ repos:
   galaxy:
     version: null
     packages: []
+team: world
