--- a/world/ntfs-3g/PKGBUILD
+++ b/world/ntfs-3g/PKGBUILD
@@ -1,31 +1,31 @@
-# Maintainer: Nathan <ndowens@artixlinux.org>
+# Maintainer: Gaetan Bisson <bisson@archlinux.org>
 # Contributor: Tom Gundersen <teg@jklm.no>
 # Contributor: Ronald van Haren <ronald.archlinux.org>
 # Contributor: Thomas Bächler <thomas.archlinux.org>
 
 pkgname=ntfs-3g
-_pkgname=ntfs-3g_ntfsprogs
 pkgver=2022.10.3
-pkgrel=1
+pkgrel=2
 pkgdesc='NTFS filesystem driver and utilities'
 url='https://www.tuxera.com/community/open-source-ntfs-3g/'
 arch=('x86_64')
 license=('GPL2')
 depends=('util-linux' 'fuse2')
-source=("https://tuxera.com/opensource/${_pkgname}-${pkgver}.tgz")
-sha256sums=('f20e36ee68074b845e3629e6bced4706ad053804cbaf062fbae60738f854170c')
-
+makedepends=('git')
 conflicts=('ntfsprogs')
 provides=('ntfsprogs')
 replaces=('ntfsprogs')
+source=("git+https://github.com/tuxera/ntfs-3g.git#tag=${pkgver}")
+sha256sums=('2ea31198406ad58b7cf4fd163c7192b7ea21639b0f770d930ccb25b3c188112e')
 
 prepare() {
-  cd ${_pkgname}-${pkgver}
+  cd ${pkgname}
+  autoreconf -fiv
   sed 's|$(DESTDIR)/sbin|$(DESTDIR)/usr/bin|' -i {ntfsprogs,src}/Makefile.in
 }
 
 build() {
-  cd ${_pkgname}-${pkgver}
+  cd ${pkgname}
   ./configure \
     --prefix=/usr \
     --sbin=/usr/bin \
@@ -42,7 +42,7 @@ build() {
 }
 
 package_ntfs-3g() {
-  cd ${_pkgname}-${pkgver}
+  cd ${pkgname}
   make DESTDIR="${pkgdir}" rootbindir=/usr/bin rootsbindir=/usr/bin rootlibdir=/usr/lib install
   rm "${pkgdir}"/usr/share/man/man8/ntfsfallocate.8 # uninstalled binary
   ln -s /usr/bin/ntfs-3g "${pkgdir}/usr/bin/mount.ntfs"
