--- a/world/python-websockets/.artixlinux/pkgbase.yaml
+++ b/world/python-websockets/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: python-websockets
-  version: 12.0-3
+  version: 15.0.1-1
   arch:
     - x86_64
   pkgname:
     - python-websockets
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -28,12 +28,13 @@ repos:
     version: null
     packages: []
   world-gremlins:
-    version: null
-    packages: []
-  world:
-    version: 12.0-3
+    version: 15.0.1-1
     packages:
-      - python-websockets-12.0-3-x86_64.pkg.tar.zst
+      - python-websockets-15.0.1-1-x86_64.pkg.tar.zst
+  world:
+    version: 15.0.1-1
+    packages:
+      - python-websockets-15.0.1-1-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
