--- a/world/xsettingsd/.artixlinux/pkgbase.yaml
+++ b/world/xsettingsd/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: xsettingsd
-  version: 1.0.2-2.2
+  version: 1.0.2-3
   arch:
     - x86_64
   pkgname:
     - xsettingsd
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 1.0.2-2.2
+    version: 1.0.2-3
     packages:
-      - xsettingsd-1.0.2-2.2-x86_64.pkg.tar.zst
+      - xsettingsd-1.0.2-3-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
