--- a/world/xsettingsd/PKGBUILD
+++ b/world/xsettingsd/PKGBUILD
@@ -1,26 +1,27 @@
-# Maintainer: Alad Wenter <alad@archlinux.org>
+# Maintainer: 
+# Contributor: Alad Wenter <alad@archlinux.org>
 
 pkgname=xsettingsd
 pkgver=1.0.2
-pkgrel=2.2
+pkgrel=3
 pkgdesc="Provides settings to X11 applications via the XSETTINGS specification"
 arch=('x86_64')
-url="https://github.com/derat/xsettingsd"
+url="https://codeberg.org/derat/xsettingsd"
 license=('custom:BSD')
 depends=('libx11' 'gcc-libs')
-makedepends=('cmake')
-source=(https://github.com/derat/xsettingsd/archive/v$pkgver/$pkgname-$pkgver.tar.gz)
-sha256sums=('69b5d1987608d1b5f2a0085f2f88cc55936a99b92279118e655d665ebb5e50d3')
+makedepends=('cmake' 'git')
+source=(git+https://codeberg.org/derat/xsettingsd.git#tag=v${pkgver})
+sha256sums=('856635233137cc75f5435960252c3cb7f48422d1fc3d8049c06104fe01215996')
 
 build() {
-  cmake -B build -S $pkgname-$pkgver \
+  cmake -B build -S $pkgname \
     -DCMAKE_INSTALL_PREFIX=/usr
   cmake --build build
 }
 
 package() {
   DESTDIR="$pkgdir" cmake --install build
-  install -Dm644 $pkgname-$pkgver/COPYING -t "$pkgdir"/usr/share/licenses/$pkgname
+  install -Dm644 $pkgname/COPYING -t "$pkgdir"/usr/share/licenses/$pkgname
 
   rm -r $pkgdir/usr/lib/systemd
 }
