--- a/world/meson/.artixlinux/pkgbase.yaml
+++ b/world/meson/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: meson
-  version: 1.7.2-1
+  version: 1.8.0-1
   arch:
     - any
   pkgname:
     - meson
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 1.7.2-1
+    version: 1.8.0-1
     packages:
-      - meson-1.7.2-1-any.pkg.tar.zst
+      - meson-1.8.0-1-any.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
