--- a/world/unicorn/.artixlinux/pkgbase.yaml
+++ b/world/unicorn/.artixlinux/pkgbase.yaml
@@ -1,7 +1,7 @@
 ---
 pkgbase:
   name: unicorn
-  version: 2.1.2-2
+  version: 2.1.3-3
   arch:
     - x86_64
   pkgname:
@@ -10,7 +10,7 @@ pkgbase:
     - ruby-unicorn-engine
 actions:
   addRepo: world
-  removeRepo: world-goblins
+  removeRepo: world-gremlins
   triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
@@ -33,11 +33,11 @@ repos:
     version: null
     packages: []
   world:
-    version: 2.1.2-2
+    version: 2.1.3-3
     packages:
-      - unicorn-2.1.2-2-x86_64.pkg.tar.zst
-      - python-unicorn-2.1.2-2-x86_64.pkg.tar.zst
-      - ruby-unicorn-engine-2.1.2-2-x86_64.pkg.tar.zst
+      - unicorn-2.1.3-3-x86_64.pkg.tar.zst
+      - python-unicorn-2.1.3-3-x86_64.pkg.tar.zst
+      - ruby-unicorn-engine-2.1.3-3-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
