--- a/galaxy/openbox/.artixlinux/pkgbase.yaml
+++ b/galaxy/openbox/.artixlinux/pkgbase.yaml
@@ -7,12 +7,12 @@ pkgbase:
   pkgname:
     - openbox
 actions:
-  addRepo: galaxy
-  removeRepo: null
-  triggersBuild: true
+  addRepo: null
+  removeRepo: galaxy-goblins
+  triggersBuild: false
   triggersRebuild: false
-  triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoAdd: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -28,13 +28,11 @@ repos:
     version: null
     packages: []
   world-gremlins:
-    version: 3.6.1-12
-    packages:
-      - openbox-3.6.1-12-x86_64.pkg.tar.zst
+    version: null
+    packages: []
   world:
-    version: 3.6.1-11
-    packages:
-      - openbox-3.6.1-11-x86_64.pkg.tar.zst
+    version: null
+    packages: []
   lib32-goblins:
     version: null
     packages: []
@@ -45,12 +43,12 @@ repos:
     version: null
     packages: []
   galaxy-goblins:
-    version: 3.6.1-2
-    packages:
-      - openbox-3.6.1-2-x86_64.pkg.tar.zst
-  galaxy-gremlins:
     version: null
     packages: []
+  galaxy-gremlins:
+    version: 3.6.1-12
+    packages:
+      - openbox-3.6.1-12-x86_64.pkg.tar.zst
   galaxy:
     version: 3.6.1-11
     packages:
