--- a/world/wolfssl/.artixlinux/pkgbase.yaml
+++ b/world/wolfssl/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: wolfssl
-  version: 5.7.6-1
+  version: 5.8.0-1
   arch:
     - x86_64
   pkgname:
     - wolfssl
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 5.7.6-1
+    version: 5.8.0-1
     packages:
-      - wolfssl-5.7.6-1-x86_64.pkg.tar.zst
+      - wolfssl-5.8.0-1-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
