--- a/world/libsigsegv/.artixlinux/pkgbase.yaml
+++ b/world/libsigsegv/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: libsigsegv
-  version: 2.14-3
+  version: 2.15-1
   arch:
     - x86_64
   pkgname:
     - libsigsegv
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 2.14-3
+    version: 2.15-1
     packages:
-      - libsigsegv-2.14-3-x86_64.pkg.tar.zst
+      - libsigsegv-2.15-1-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
