--- a/world/lighttpd/.artixlinux/pkgbase.yaml
+++ b/world/lighttpd/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: lighttpd
-  version: 1.4.79-1
+  version: 1.4.79-2
   arch:
     - x86_64
   pkgname:
     - lighttpd
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 1.4.79-1
+    version: 1.4.79-2
     packages:
-      - lighttpd-1.4.79-1-x86_64.pkg.tar.zst
+      - lighttpd-1.4.79-2-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
