--- a/world/mariadb/.artixlinux/pkgbase.yaml
+++ b/world/mariadb/.artixlinux/pkgbase.yaml
@@ -1,7 +1,7 @@
 ---
 pkgbase:
   name: mariadb
-  version: 11.7.2-2
+  version: 11.7.2-3
   arch:
     - x86_64
   pkgname:
@@ -11,11 +11,11 @@ pkgbase:
     - mytop
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -34,12 +34,12 @@ repos:
     version: null
     packages: []
   world:
-    version: 11.7.2-2
+    version: 11.7.2-3
     packages:
-      - mariadb-libs-11.7.2-2-x86_64.pkg.tar.zst
-      - mariadb-clients-11.7.2-2-x86_64.pkg.tar.zst
-      - mariadb-11.7.2-2-x86_64.pkg.tar.zst
-      - mytop-11.7.2-2-x86_64.pkg.tar.zst
+      - mariadb-libs-11.7.2-3-x86_64.pkg.tar.zst
+      - mariadb-clients-11.7.2-3-x86_64.pkg.tar.zst
+      - mariadb-11.7.2-3-x86_64.pkg.tar.zst
+      - mytop-11.7.2-3-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
