--- a/world/mlt/.artixlinux/pkgbase.yaml
+++ b/world/mlt/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: mlt
-  version: 7.30.0-1
+  version: 7.30.0-2
   arch:
     - x86_64
   pkgname:
     - mlt
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 7.30.0-1
+    version: 7.30.0-2
     packages:
-      - mlt-7.30.0-1-x86_64.pkg.tar.zst
+      - mlt-7.30.0-2-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
