--- a/world/netcdf/.artixlinux/pkgbase.yaml
+++ b/world/netcdf/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: netcdf
-  version: 4.9.3-2
+  version: 4.9.3-3
   arch:
     - x86_64
   pkgname:
     - netcdf
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 4.9.3-2
+    version: 4.9.3-3
     packages:
-      - netcdf-4.9.3-2-x86_64.pkg.tar.zst
+      - netcdf-4.9.3-3-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
