--- a/world/netpbm/PKGBUILD
+++ b/world/netpbm/PKGBUILD
@@ -2,7 +2,7 @@
 
 pkgname=netpbm
 pkgver=10.86.46
-pkgrel=1
+pkgrel=2
 pkgdesc='A toolkit for manipulation of graphic images'
 arch=(x86_64)
 license=(Artistic-1.0 GPL-2.0-only LGPL-2.0-only MIT)
@@ -50,6 +50,7 @@ prepare() {
   echo 'PNGLIB = libpng.so' >> config.mk
   echo 'ZLIB = libz.so' >> config.mk
   echo 'JBIGLIB = /usr/lib/libjbig.a' >> config.mk
+  echo 'CFLAGS = -std=c17 -Wno-implicit-function-declaration -Wno-int-conversion -D_DEFAULT_SOURCE' >> config.mk
 
   sed -i 's|misc|share/netpbm|' common.mk
   sed -e 's|/sharedlink|/lib|' -e 's|/staticlink|/lib|' -i lib/Makefile
