--- a/world/newsboat/.artixlinux/pkgbase.yaml
+++ b/world/newsboat/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: newsboat
-  version: 2.39-1
+  version: 2.39-2
   arch:
     - x86_64
   pkgname:
     - newsboat
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 2.39-1
+    version: 2.39-2
     packages:
-      - newsboat-2.39-1-x86_64.pkg.tar.zst
+      - newsboat-2.39-2-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
