--- a/world/bind/.artixlinux/pkgbase.yaml
+++ b/world/bind/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: bind
-  version: 9.20.8-1
+  version: 9.20.8-2
   arch:
     - x86_64
   pkgname:
     - bind
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 9.20.8-1
+    version: 9.20.8-2
     packages:
-      - bind-9.20.8-1-x86_64.pkg.tar.zst
+      - bind-9.20.8-2-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
