--- a/world/brasero/.artixlinux/pkgbase.yaml
+++ b/world/brasero/.artixlinux/pkgbase.yaml
@@ -2,18 +2,18 @@
 team: world
 pkgbase:
   name: brasero
-  version: 3.12.3+r41+g98342080-1
+  version: 3.12.3+r41+g98342080-2
   arch:
     - x86_64
   pkgname:
     - brasero
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -32,9 +32,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 3.12.3+r41+g98342080-1
+    version: 3.12.3+r41+g98342080-2
     packages:
-      - brasero-3.12.3+r41+g98342080-1-x86_64.pkg.tar.zst
+      - brasero-3.12.3+r41+g98342080-2-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
