--- a/world/clang18/.artixlinux/pkgbase.yaml
+++ b/world/clang18/.artixlinux/pkgbase.yaml
@@ -2,18 +2,18 @@
 team: world
 pkgbase:
   name: clang18
-  version: 18.1.8-1
+  version: 18.1.8-2
   arch:
     - x86_64
   pkgname:
     - clang18
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -32,9 +32,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 18.1.8-1
+    version: 18.1.8-2
     packages:
-      - clang18-18.1.8-1-x86_64.pkg.tar.zst
+      - clang18-18.1.8-2-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
