--- a/world/ctags/.artixlinux/pkgbase.yaml
+++ b/world/ctags/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: ctags
-  version: 1:6.1.0-2
+  version: 1:6.1.0-3
   arch:
     - x86_64
   pkgname:
     - ctags
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 1:6.1.0-2
+    version: 1:6.1.0-3
     packages:
-      - ctags-1:6.1.0-2-x86_64.pkg.tar.zst
+      - ctags-1:6.1.0-3-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
@@ -52,3 +52,4 @@ repos:
   galaxy:
     version: null
     packages: []
+team: world
