--- a/world/dejagnu/.artixlinux/pkgbase.yaml
+++ b/world/dejagnu/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: dejagnu
-  version: 1.6.3-12
+  version: 1.6.3-13
   arch:
     - any
   pkgname:
     - dejagnu
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 1.6.3-12
+    version: 1.6.3-13
     packages:
-      - dejagnu-1.6.3-12-any.pkg.tar.zst
+      - dejagnu-1.6.3-13-any.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
