--- a/world/digikam/PKGBUILD
+++ b/world/digikam/PKGBUILD
@@ -7,7 +7,7 @@
 pkgname=digikam
 _pkgver=8.6.0
 pkgver=${_pkgver//-/} # for beta versions
-pkgrel=2
+pkgrel=3
 pkgdesc='An advanced digital photo management application'
 arch=(x86_64)
 license=(GPL-2.0-or-later)
@@ -73,10 +73,16 @@ optdepends=('darktable: RAW import'
             'hugin: panorama tool'
             'qt6-imageformats: support for additional image formats (WEBP, TIFF)'
             'rawtherapee: RAW import')
-source=(https://download.kde.org/stable/$pkgname/${_pkgver%-*}/digiKam-$_pkgver.tar.xz{,.sig})
+source=(https://download.kde.org/stable/$pkgname/${_pkgver%-*}/digiKam-$_pkgver.tar.xz{,.sig}
+        https://invent.kde.org/graphics/digikam/-/commit/325b19fc.patch)
 sha256sums=('000971e117201976cba413b6d7201720a8893799d6064bcf158d4388e829c233'
-            'SKIP')
+            'SKIP'
+            '84a04775acbe2a6ce9fe688123301b18fdba417bb6a54e7c0bca327647912af3')
 validpgpkeys=(D1CF2444A7858C5F2FB095B74A77747BC2386E50) # digiKam.org (digiKam project) <digikamdeveloper@gmail.com>
+
+prepare() {
+  patch -d $pkgname-$_pkgver -p1 < 325b19fc.patch # Fix build with Qt 6.9
+}
 
 build() {
   cmake -B build -S $pkgname-$_pkgver \
