--- a/world/digikam/.artixlinux/pkgbase.yaml
+++ b/world/digikam/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: digikam
-  version: 8.6.0-2
+  version: 8.6.0-3
   arch:
     - x86_64
   pkgname:
     - digikam
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 8.6.0-2
+    version: 8.6.0-3
     packages:
-      - digikam-8.6.0-2-x86_64.pkg.tar.zst
+      - digikam-8.6.0-3-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
