--- a/world/dvdauthor/.artixlinux/pkgbase.yaml
+++ b/world/dvdauthor/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: dvdauthor
-  version: 0.7.2-12
+  version: 0.7.2-13
   arch:
     - x86_64
   pkgname:
     - dvdauthor
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 0.7.2-12
+    version: 0.7.2-13
     packages:
-      - dvdauthor-0.7.2-12-x86_64.pkg.tar.zst
+      - dvdauthor-0.7.2-13-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
