--- a/world/ebook-tools/.artixlinux/pkgbase.yaml
+++ b/world/ebook-tools/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: ebook-tools
-  version: 0.2.2-8
+  version: 0.2.2-9
   arch:
     - x86_64
   pkgname:
     - ebook-tools
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 0.2.2-8
+    version: 0.2.2-9
     packages:
-      - ebook-tools-0.2.2-8-x86_64.pkg.tar.zst
+      - ebook-tools-0.2.2-9-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
