--- a/world/emacs/.artixlinux/pkgbase.yaml
+++ b/world/emacs/.artixlinux/pkgbase.yaml
@@ -1,7 +1,7 @@
 ---
 pkgbase:
   name: emacs
-  version: 30.1-4
+  version: 30.1-5
   arch:
     - x86_64
   pkgname:
@@ -10,11 +10,11 @@ pkgbase:
     - emacs-wayland
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -33,11 +33,11 @@ repos:
     version: null
     packages: []
   world:
-    version: 30.1-4
+    version: 30.1-5
     packages:
-      - emacs-30.1-4-x86_64.pkg.tar.zst
-      - emacs-nox-30.1-4-x86_64.pkg.tar.zst
-      - emacs-wayland-30.1-4-x86_64.pkg.tar.zst
+      - emacs-30.1-5-x86_64.pkg.tar.zst
+      - emacs-nox-30.1-5-x86_64.pkg.tar.zst
+      - emacs-wayland-30.1-5-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
