--- a/world/evince/.artixlinux/pkgbase.yaml
+++ b/world/evince/.artixlinux/pkgbase.yaml
@@ -1,7 +1,7 @@
 ---
 pkgbase:
   name: evince
-  version: 48.0-2
+  version: 48.0-3
   arch:
     - x86_64
   pkgname:
@@ -9,11 +9,11 @@ pkgbase:
     - evince-lib-docs
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -32,10 +32,10 @@ repos:
     version: null
     packages: []
   world:
-    version: 48.0-2
+    version: 48.0-3
     packages:
-      - evince-48.0-2-x86_64.pkg.tar.zst
-      - evince-lib-docs-48.0-2-x86_64.pkg.tar.zst
+      - evince-48.0-3-x86_64.pkg.tar.zst
+      - evince-lib-docs-48.0-3-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
