--- a/world/evolution-data-server/.artixlinux/pkgbase.yaml
+++ b/world/evolution-data-server/.artixlinux/pkgbase.yaml
@@ -1,7 +1,7 @@
 ---
 pkgbase:
   name: evolution-data-server
-  version: 3.56.1-1
+  version: 3.56.1-3
   arch:
     - x86_64
   pkgname:
@@ -10,11 +10,11 @@ pkgbase:
     - evolution-data-server-docs
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -27,17 +27,20 @@ repos:
     version: null
     packages: []
   world-goblins:
-    version: null
-    packages: []
+    version: 3.56.1-3
+    packages:
+      - evolution-data-server-3.56.1-3-x86_64.pkg.tar.zst
+      - libedataserverui4-3.56.1-3-x86_64.pkg.tar.zst
+      - evolution-data-server-docs-3.56.1-3-x86_64.pkg.tar.zst
   world-gremlins:
     version: null
     packages: []
   world:
-    version: 3.56.1-1
+    version: 3.56.1-2
     packages:
-      - evolution-data-server-3.56.1-1-x86_64.pkg.tar.zst
-      - libedataserverui4-3.56.1-1-x86_64.pkg.tar.zst
-      - evolution-data-server-docs-3.56.1-1-x86_64.pkg.tar.zst
+      - evolution-data-server-3.56.1-2-x86_64.pkg.tar.zst
+      - libedataserverui4-3.56.1-2-x86_64.pkg.tar.zst
+      - evolution-data-server-docs-3.56.1-2-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
