--- a/world/ffmpeg/.artixlinux/pkgbase.yaml
+++ b/world/ffmpeg/.artixlinux/pkgbase.yaml
@@ -1,7 +1,7 @@
 ---
 pkgbase:
   name: ffmpeg
-  version: 2:7.1-11
+  version: 2:7.1.1-1
   arch:
     - x86_64
   pkgname:
@@ -25,16 +25,15 @@ repos:
     version: null
     packages: []
   world-goblins:
-    version: 2:7.1-11
-    packages:
-      - ffmpeg-2:7.1-11-x86_64.pkg.tar.zst
+    version: null
+    packages: []
   world-gremlins:
     version: null
     packages: []
   world:
-    version: 2:7.1-10
+    version: 2:7.1.1-1
     packages:
-      - ffmpeg-2:7.1-10-x86_64.pkg.tar.zst
+      - ffmpeg-2:7.1.1-1-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
