--- a/world/ffmpeg4.4/.artixlinux/pkgbase.yaml
+++ b/world/ffmpeg4.4/.artixlinux/pkgbase.yaml
@@ -25,16 +25,15 @@ repos:
     version: null
     packages: []
   world-goblins:
-    version: 4.4.5-5
-    packages:
-      - ffmpeg4.4-4.4.5-5-x86_64.pkg.tar.zst
+    version: null
+    packages: []
   world-gremlins:
     version: null
     packages: []
   world:
-    version: 4.4.5-4
+    version: 4.4.5-5
     packages:
-      - ffmpeg4.4-4.4.5-4-x86_64.pkg.tar.zst
+      - ffmpeg4.4-4.4.5-5-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
